name:                calico
version:             0.1.0
synopsis:            Yet another prelude library.
description:         Yet another prelude library.
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
copyright:           (c) 2015 Phil Ruffwind
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Calico
  build-depends:       base >=4.5 && <5
                     , bytestring >=0.10 && <0.11
                     , text >=1.1 && <1.3
  default-language:    Haskell2010
  other-extensions:    CPP
