name:                calico
version:             0.1.0
synopsis:            Yet another prelude library.
description:         Yet another prelude library.
license:             MIT
license-file:        LICENSE
author:              Phil Ruffwind
maintainer:          rf@rufflewind.com
copyright:           (c) 2015 Phil Ruffwind
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Calico
                       Calico.Base
                       Calico.IO
                       Calico.IOControl

                       -- transformers
                       Calico.MonadIO

                       -- lifted-base monad-control transformers
                       -- [FlexibleContexts]
                       Calico.MonadIOControl

                       -- bytestring
                       Calico.ByteString
                       Calico.ByteString.IO

                       -- bytestring transformers
                       Calico.ByteString.MonadIO

                       -- text
                       Calico.Text
                       Calico.Text.IO

                       -- text transformers
                       Calico.Text.MonadIO

  build-depends:       base >=4.5 && <5
                     , bytestring >=0.10 && <0.11
                     , text >=1.1 && <1.3
                     , lifted-base
                     , monad-control
                     , transformers
  default-language:    Haskell2010
  other-extensions:    CPP
                       FlexibleContexts
  ghc-options:         -Wall
